--- a/.bluemix/ui.pipeline.yml
+++ b/.bluemix/ui.pipeline.yml
@@ -35,8 +35,8 @@ stages:
     script: |-
       #!/bin/bash
       # Push app
-      cf create-service service_discovery free myMicroservicesServiceDiscovery
-      export CF_APP_NAME="dev-$CF_APP"
+      cf ds myMicroserviceURLs
+      cf cups myMicroserviceURLs -p '{"catalog-url":"${CATALOG_APP_NAME}","orders-url":"${ORDERS_APP_NAME}"}'
       cf push
       # View logs
       #cf logs "${CF_APP_NAME}" --recent
